--- a/test-1.html
+++ b/test-1.html
@@ -274,14 +274,14 @@
 
 
 
-<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; position: relative; width: 100%;">
+<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
-    /* 모든 하위 요소의 크기 계산 방식 통일 (테두리 포함 900px 고정) */
+    /* 배너 밑 토너먼트 스케줄, 모든 요소의 크기 계산 방식을 배너와 동일하게 강제 */
     .performance-log-section *, .performance-log-section *:before, .performance-log-section *:after {
       box-sizing: border-box !important;
     }
 
-    /* 베너 바로 밑 토너먼트 스케줄 테이블 구조 최적화 */
+    /* 테이블 구조 최적화 */
     .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 0; border: none; }
     .log-table th { background: #f8f9fa; font-size: 11px; color: #0c2340; text-transform: uppercase; padding: 12px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
     .log-table th.col-left { text-align: left; padding-left: 20px; }
@@ -290,13 +290,13 @@
     .under-par { color: #e74c3c !important; font-weight: 800 !important; }
     .over-par { color: #2c3e50 !important; font-weight: 700 !important; }
     
-    /* 테두리 정렬 및 시각적 팽창 억제 */
+    /* 배너의 카드 스타일과 너비/테두리 일치화 */
     .live-event-card { 
       background: #ffffff; 
-      border: 2px solid #0c2340; 
-      border-radius: 20px; 
+      border: 1px solid #e2e8f0; /* 배너와 동일한 테두리 두께 및 색상 */
+      border-radius: 25px; /* 배너와 동일한 곡률 */
       padding: 0; 
-      box-shadow: 0 8px 25px rgba(12, 35, 64, 0.08); /* 그림자 팽창 최소화 */
+      box-shadow: 0 20px 40px rgba(0,0,0,0.18); /* 배너와 동일한 그림자 */
       margin-bottom: 50px; 
       position: relative; 
       display: flex; 
@@ -305,22 +305,20 @@
       width: 100%;
     }
 
-    /* 실시간 상태 표시 점 애니메이션 */
+    /* 애니메이션 및 기타 스타일 유지 */
     @keyframes live-pulse {
       0% { opacity: 1; transform: scale(1); }
       50% { opacity: 0.4; transform: scale(0.9); }
       100% { opacity: 1; transform: scale(1); }
     }
     .live-dot {
-      width: 6px;
-      height: 6px;
+      width: 6px; height: 6px;
       background-color: #ffffff;
       border-radius: 50%;
       display: inline-block;
     }
 
     @media (max-width: 768px) {
-      .performance-log-section { padding: 0 15px; } 
       .log-table thead { display: none; }
       .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; }
       .log-table tr { margin-bottom: 15px; border: 1px solid #eee !important; border-radius: 12px; padding: 12px; }
@@ -349,250 +347,85 @@
     </h1>
   </div>
 
-  <div id="Tournament-Schedule-Scoring" style="padding-top: 20px;"></div>
-
-<style>
-  .pairing-modal {
-    display: none;
-    position: fixed;
-    z-index: 10001;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-  }
-  .modal-content-wrapper {
-    position: relative;
-    max-width: 90%;
-    max-height: 90vh;
-    text-align: center;
-  }
-  .pairing-modal img {
-    max-width: 100%;
-    max-height: 80vh;
-    border-radius: 8px;
-    box-shadow: 0 5px 25px rgba(0,0,0,0.5);
-    border: 3px solid #fff;
-  }
-  .close-x {
-    position: absolute;
-    top: -40px;
-    right: 0;
-    color: white;
-    font-size: 30px;
-    cursor: pointer;
-    font-weight: bold;
-  }
-  .close-btn-bottom {
-    margin-top: 15px;
-    padding: 8px 25px;
-    background: #fff;
-    color: #0c2340;
-    border: none;
-    border-radius: 4px;
-    font-weight: 800;
-    font-size: 12px;
-    cursor: pointer;
-    text-transform: uppercase;
-  }
-  .pairing-btn {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    background: #f1f5f9;
-    padding: 2px 6px;
-    border-radius: 4px;
-    border: 1px solid #e2e8f0;
-    transition: all 0.2s ease;
-  }
-  .pairing-btn:hover {
-    background: #e2e8f0;
-  }
-  .pairing-btn span {
-    font-size: 10px;
-    font-weight: 800;
-    color: #64748b;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-  }
-</style>
-
-<div id="pairingModal" class="pairing-modal" onclick="closePairing()">
-  <div class="modal-content-wrapper" onclick="event.stopPropagation()">
-    <span class="close-x" onclick="closePairing()">&times;</span>
-    <img id="pairingImg" src="" alt="Round Pairing">
-    <br>
-    <button class="close-btn-bottom" onclick="closePairing()">Close</button>
-  </div>
-</div>
-
-<script>
-  function openPairing(imgSrc) {
-    document.getElementById('pairingImg').src = imgSrc;
-    document.getElementById('pairingModal').style.display = 'flex';
-    document.body.style.overflow = 'hidden'; 
-  }
-  function closePairing() {
-    document.getElementById('pairingModal').style.display = 'none';
-    document.body.style.overflow = 'auto'; 
-  }
-</script>
-
-<div class="live-event-card">
-  <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;">
-    <div style="display: flex; align-items: center; gap: 12px;">
-      <div style="background: #94a3b8; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
-        <span class="live-dot"></span>
-        FINISHED
+  <div class="live-event-card">
+    <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;">
+      <div style="display: flex; align-items: center; gap: 12px;">
+        <div style="background: #94a3b8; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
+          <span class="live-dot"></span>
+          FINISHED
+        </div>
+        <div>
+          <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate (UTRGV)</h2>
+          <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 72/6,701 yards</div>
+        </div>
       </div>
-      <div>
-        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate (UTRGV)</h2>
-        <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 72/6,701 yards</div>
+      <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Feb 3, 2026</div>
+    </div>
+
+    <div>
+      <table class="log-table">
+        <thead>
+          <tr>
+            <th class="col-info col-left">Round</th>
+            <th class="col-score">Score</th>
+            <th class="col-par">Par</th>
+            <th class="col-status">Status</th>
+            <th class="col-finish">Rank</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="col-left">
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
+                <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-UTRGV-Round-1-pairing.jpeg')"><span>Pairing</span></div>
+                <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')"><span>Scorecard</span></div>
+              </div>
+              <div style="font-size: 11px; color: #7f8c8d;">Feb 1, 2026</div>
+            </td>
+            <td class="hide-mobile under-par">70</td>
+            <td class="hide-mobile under-par">-2</td>
+            <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
+            <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">1</td>
+          </tr>
+          <tr>
+            <td class="col-left">
+              <div style="display: flex; align-items: center; gap: 8px;"><div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div></div>
+              <div style="font-size: 11px; color: #7f8c8d;">Feb 2, 2026</div>
+            </td>
+            <td class="hide-mobile">75</td>
+            <td class="hide-mobile">+3</td>
+            <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
+            <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T2</td>
+          </tr>
+          <tr>
+            <td class="col-left">
+              <div style="display: flex; align-items: center; gap: 8px;"><div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div></div>
+              <div style="font-size: 11px; color: #7f8c8d;">Feb 3, 2026</div>
+            </td>
+            <td class="hide-mobile under-par">71</td>
+            <td class="hide-mobile under-par">-1</td>
+            <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
+            <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T3</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
+      <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/team" target="_blank" style="margin-right: auto; color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 900; background: #ffffff; padding: 5px 12px; border-radius: 6px;">FINAL RESULTS</a>
+      <div style="text-align: right;">
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; display: block;">Total Score</span>
+        <span style="color: #ffffff; font-size: 18px; font-weight: 900;">216</span>
       </div>
-    </div>
-    <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Feb 3, 2026</div>
-  </div>
-
-  <div>
-    <table class="log-table">
-      <thead>
-        <tr>
-          <th class="col-info col-left">Round</th>
-          <th class="col-score">Score</th>
-          <th class="col-par">Par</th>
-          <th class="col-status">Status</th>
-          <th class="col-finish">Rank</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="col-left">
-            <div style="display: flex; align-items: center; gap: 8px;">
-              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-UTRGV-Round-1-pairing.jpeg')">
-                <span>Pairing</span>
-                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M15 3h6v6"></path>
-                  <path d="M10 14L21 3"></path>
-                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                </svg>
-              </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
-                <span>Scorecard</span>
-                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M15 3h6v6"></path>
-                  <path d="M10 14L21 3"></path>
-                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                </svg>
-              </div>
-            </div>
-            <div style="font-size: 11px; color: #7f8c8d;">Feb 1, 2026</div>
-            <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">70</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-2</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">1</span></div>
-            </div>
-          </td>
-          <td class="hide-mobile under-par">70</td>
-          <td class="hide-mobile under-par">-2</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
-          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">1</td>
-        </tr>
-        <tr>
-          <td class="col-left">
-            <div style="display: flex; align-items: center; gap: 8px;">
-              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-UTRGV-pairing2.jpeg')">
-                <span>Pairing</span>
-                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M15 3h6v6"></path>
-                  <path d="M10 14L21 3"></path>
-                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                </svg>
-              </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
-                <span>Scorecard</span>
-                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M15 3h6v6"></path>
-                  <path d="M10 14L21 3"></path>
-                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                </svg>
-              </div>
-            </div>
-            <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 2, 2026</div>
-            <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">75</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">+3</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">T2</span></div>
-            </div>
-          </td>
-          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">75</td>
-          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">+3</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
-          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T2</td>
-        </tr>
-        <tr>
-          <td class="col-left">
-            <div style="display: flex; align-items: center; gap: 8px;">
-              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-UTRGV-pairing3.jpeg')">
-                <span>Pairing</span>
-                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M15 3h6v6"></path>
-                  <path d="M10 14L21 3"></path>
-                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                </svg>
-              </div>
-              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
-                <span>Scorecard</span>
-                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M15 3h6v6"></path>
-                  <path d="M10 14L21 3"></path>
-                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                </svg>
-              </div>
-            </div>
-            <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 3, 2026</div>
-            <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">71</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-1</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">T3</span></div>
-            </div>
-          </td>
-          <td class="hide-mobile under-par">71</td>
-          <td class="hide-mobile under-par">-1</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
-          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T3</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
-    <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/team" target="_blank" style="margin-right: auto; display: flex; align-items: center; gap: 8px; color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 900; letter-spacing: 0.8px; text-transform: uppercase; border: 1.5px solid #0c2340; padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
-      <span style="display: flex; align-items: center; gap: 6px;">
-        <span style="width: 5px; height: 5px; background-color: #bdc3c7; border-radius: 50%; display: inline-block;"></span>
-        FINAL RESULTS
-      </span>
-      <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#bdc3c7" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
-        <line x1="7" y1="17" x2="17" y2="7"></line>
-        <polyline points="7 7 17 7 17 17"></polyline>
-      </svg>
-    </a>
-    <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">216</span>
-    </div>
-    <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">E</span>
-    </div>
-    <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T3</span>
+      <div style="text-align: right;">
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; display: block;">Par</span>
+        <span style="color: #ffffff; font-size: 18px; font-weight: 900;">E</span>
+      </div>
+      <div style="text-align: right;">
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; display: block;">Final Rank</span>
+        <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T3</span>
+      </div>
     </div>
   </div>
 </div>
