--- a/test-1.html
+++ b/test-1.html
@@ -439,7 +439,7 @@
 
 
 
-<div class="current-focus-section" style="width: 100%; max-width: 900px; margin: 30px auto 40px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-section" style="width: 100%; max-width: 900px; margin: 30px auto 40px; padding: 0 !important; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center; box-sizing: border-box;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">
@@ -448,7 +448,7 @@
     </div>
 </div>
 
-<div class="legal-pad-wrapper" style="width: 100%; max-width: 900px; margin: 0 auto 30px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0; box-sizing: border-box;">
+<div class="legal-pad-wrapper" style="width: 100%; max-width: 900px; margin: 0 auto 30px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0 !important; box-sizing: border-box;">
     <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b; box-sizing: border-box;">
         <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px; box-sizing: border-box;">
             <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%; box-sizing: border-box;"></div>
@@ -526,7 +526,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
-<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 0px auto 30px auto; padding: 0; background: transparent; box-sizing: border-box;">
+<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 0px auto 30px auto; padding: 0 !important; background: transparent; box-sizing: border-box;">
   <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box;">
     <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center;">
       
