--- a/test-1.html
+++ b/test-1.html
@@ -439,18 +439,18 @@
 
 
 
-<div class="master-wrapper" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0; box-sizing: border-box; text-align: left;">
+<div class="master-wrapper" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0; box-sizing: border-box; text-align: left; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-    <div class="current-focus-section" style="width: 100%; margin: 30px 0 40px 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+    <div class="current-focus-section" style="width: 100%; margin: 30px 0 40px 0; padding: 0; box-sizing: border-box;">
         <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
-        <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center; box-sizing: border-box;">
+        <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; text-align: center; box-sizing: border-box;">
             <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">
                 Current Focus
             </h1>
         </div>
     </div>
 
-    <div class="legal-pad-wrapper" style="width: 100%; margin: 0 0 30px 0; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0; box-sizing: border-box;">
+    <div class="legal-pad-wrapper" style="width: 100%; margin: 0 0 40px 0; position: relative; box-sizing: border-box;">
         <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b; box-sizing: border-box;">
             <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px; box-sizing: border-box;">
                 <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%; box-sizing: border-box;"></div>
@@ -522,10 +522,10 @@
         </div>
     </div>
 
-    <div class="performance-analysis-wrapper" style="width: 100%; margin: 0 0 30px 0; padding: 0; background: transparent; box-sizing: border-box;">
-      <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box;">
+    <div class="performance-analysis-wrapper" style="width: 100%; margin: 0; padding: 0; background: transparent; box-sizing: border-box;">
+      <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box; width: 100%;">
         <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center;">
-          <h2 style="margin: 0; color: #0c2340; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Analysis</h2>
+          <h2 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Analysis</h2>
           <p style="font-size: 0.85em; color: #666; margin-bottom: 45px; font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-weight: 400; text-transform: uppercase; margin-top: 8px;">Official Tournaments Verified Records</p>
           
           <div style="width: 100%; padding: 0 20px; box-sizing: border-box; text-align: left;">
