--- a/test-1.html
+++ b/test-1.html
@@ -443,14 +443,14 @@
 
     <div class="current-focus-section" style="width: 100%; margin: 30px 0 40px 0; padding: 0; box-sizing: border-box;">
         <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
-        <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; text-align: center; box-sizing: border-box;">
+        <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; text-align: center; box-sizing: border-box; width: 100%;">
             <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">
                 Current Focus
             </h1>
         </div>
     </div>
 
-    <div class="legal-pad-wrapper" style="width: 100%; margin: 0 0 40px 0; position: relative; box-sizing: border-box;">
+    <div class="legal-pad-wrapper" style="width: 100%; margin: 0 0 40px 0; position: relative; box-sizing: border-box; display: block;">
         <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b; box-sizing: border-box;">
             <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px; box-sizing: border-box;">
                 <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%; box-sizing: border-box;"></div>
@@ -524,17 +524,17 @@
 
     <div class="performance-analysis-wrapper" style="width: 100%; margin: 0; padding: 0; background: transparent; box-sizing: border-box;">
       <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box; width: 100%;">
-        <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center;">
+        <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center; width: 100%;">
           <h2 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Analysis</h2>
           <p style="font-size: 0.85em; color: #666; margin-bottom: 45px; font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-weight: 400; text-transform: uppercase; margin-top: 8px;">Official Tournaments Verified Records</p>
           
-          <div style="width: 100%; padding: 0 20px; box-sizing: border-box; text-align: left;">
+          <div style="width: 100%; padding: 0 40px; box-sizing: border-box; text-align: left;">
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #0c2340; padding-bottom: 8px;">
               <h3 style="font-family: 'Oswald', sans-serif; font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px;">Tournament Finish History</h3>
               <span style="background: #0c2340; color: #fff; padding: 4px 12px; font-family: 'Oswald', sans-serif; font-size: 0.8em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">FRESHMAN SEASON</span>
             </div>
             
-            <div style="position: relative; height: 460px; background: #fafafa; border-radius: 8px; padding: 45px 10px 50px 10px; box-sizing: border-box;">
+            <div style="position: relative; height: 460px; background: #fafafa; border-radius: 8px; padding: 45px 10px 50px 10px; box-sizing: border-box; width: 100%;">
               <div style="position: absolute; top: 15px; right: 20px; z-index: 10; background: rgba(12, 35, 64, 0.05); border: 1px solid #0c2340; padding: 6px 14px; border-radius: 20px; display: flex; align-items: center; gap: 8px;">
                 <span style="font-family: 'Montserrat', sans-serif; font-size: 0.8em; font-weight: 700; color: #0c2340;">Adj. Avg:</span>
                 <span style="font-family: 'Oswald', sans-serif; font-size: 1.2em; font-weight: 700; color: #0c2340;">71.0</span>
