--- a/test-1.html
+++ b/test-1.html
@@ -522,7 +522,7 @@
         </div>
     </div>
 
-    <div class="performance-analysis-wrapper" style="width: 100%; margin: 0; padding: 0; background: transparent; box-sizing: border-box;">
+    <div class="performance-analysis-wrapper" style="width: 100%; margin: 0; padding: 0; box-sizing: border-box;">
       <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box; width: 100%;">
         <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center; width: 100%;">
           <h2 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Analysis</h2>
