--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -462,7 +462,10 @@
         <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px; position: relative; box-shadow: 0 15px 30px rgba(0,0,0,0.07); display: flex; flex-direction: column; box-sizing: border-box; width: 100%;">
             
             <div style="margin-bottom: 45px; position: relative; box-sizing: border-box;">
+               <style>//*앵커*//</style> 
+                <div id="Current-Focus" style="display: inline-block; box-sizing: border-box;">
                 <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 09, 2026</span>
+                </div>
                 <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block; box-sizing: border-box;">
                     Performance Analysis & Training Plan
                 </h3>
