--- a/index.html
+++ b/index.html
@@ -265,15 +265,8 @@ gtag('config', 'G-H1JW8YBDZ8');
     </a>
 </div>
 
-<div class="schedule-section" style="max-width: 900px; margin: 20px auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  
-  <div style="position: relative; text-align: center; margin-bottom: 25px; padding: 10px 0; overflow: hidden;">
-    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
-      UTSA
-    </div>
 
-
-
+    
 
 <div class="index-activity-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%;">
   
@@ -284,7 +277,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       100% { opacity: 1; transform: scale(1); }
     }
 
-    /* 배너와 칼같이 맞추기 위한 기본 구조 */
+    /* 배너 이미지와 동일한 시각적 너비를 확보하기 위해 마진과 패딩을 0으로 강제 */
     .activity-card, .focus-container {
       background: #ffffff;
       border: 2.5px solid #0c2340;
@@ -293,7 +286,9 @@ gtag('config', 'G-H1JW8YBDZ8');
       box-shadow: 0 4px 15px rgba(12, 35, 64, 0.08);
       margin-bottom: 20px;
       box-sizing: border-box;
-      width: 100%;
+      width: 100% !important;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
       display: block;
     }
 
@@ -335,36 +330,17 @@ gtag('config', 'G-H1JW8YBDZ8');
       white-space: nowrap;
     }
 
-    /* 모바일/태블릿 정밀 대응 브레이크포인트 */
+    /* 모바일에서 배너 이미지에 패딩이 있다면 동일하게 적용, 없다면 0으로 유지 */
     @media (max-width: 900px) {
-      .index-activity-section { padding: 0 15px !important; } /* 배너 여백과 동일하게 설정 */
+      .index-activity-section { 
+        padding: 0 !important; /* 배너가 화면에 꽉 찬다면 0, 여백이 있다면 그 값으로 수정 필요 */
+      }
     }
 
     @media (max-width: 768px) {
-      .activity-card-inner { 
-        flex-direction: column !important; 
-        align-items: flex-start !important; 
-        padding: 20px !important; 
-      }
-      .stats-container { 
-        width: 100% !important; 
-        justify-content: space-between !important; 
-        margin-top: 15px; 
-        border-top: 1px solid #f1f5f9;
-        padding-top: 15px;
-      }
-      .score-group {
-        border-right: none !important;
-        padding-right: 0 !important;
-      }
-      .focus-container { 
-        flex-direction: column; 
-        align-items: flex-start; 
-        gap: 12px; 
-      }
-      .focus-arrow-svg {
-        display: none; /* 모바일에서는 텍스트 흐름을 위해 화살표 생략 가능 (선택 사항) */
-      }
+      .activity-card-inner { flex-direction: column !important; align-items: flex-start !important; padding: 20px !important; }
+      .stats-container { width: 100% !important; justify-content: space-between !important; margin-top: 15px; }
+      .focus-container { flex-direction: column; align-items: flex-start; gap: 12px; }
     }
   </style>
 
@@ -382,7 +358,7 @@ gtag('config', 'G-H1JW8YBDZ8');
           <span style="color: #ffffff; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Upcoming Qualy</span>
         </div>
         <div>
-          <div style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;">
+          <div style="display: flex; align-items: baseline; gap: 8px;">
             <span style="color: #0c2340; font-weight: 900; font-size: 19px; letter-spacing: -0.3px;">UTSA Internal Qualifier</span>
             <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 10-17)</span>
           </div>
