--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     
 
 
-    
+ <div style="position: relative; text-align: center; margin-bottom: 25px; padding: 10px 0; overflow: hidden;">   
     <div style="position: relative; z-index: 2;">
       <h2 style="font-size: clamp(28px, 5vw, 36px); color: #0c2340; margin: 0; font-weight: 800; display: inline-block;">
         Schedule <span style="font-weight: 300; color: #777;">&</span> Results
